# HID-app

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  Resources.qrc  achievements.cpp  achievements.h  achievements.ui  controller.cpp  controller.h  dialog.cpp  dialog.h  dialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
doc/html/: _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_23_827_87_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_23_827_87_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_2_w_d_s___b_a_s_i_c_8dir_2_w_d_s49aa8e50d916e7c2d8189acd23177d56.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_2_w_d_s___b_a_s_i_c_8dir_2controller_8cpp_8obj_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_2_w_d_s___b_a_s_i_c_8dir_2main_8cpp_8obj_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_c_make_files_2_w_d_s___b_a_s_i_c_8dir_2mainwindow_8cpp_8obj_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__controller_8cpp.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__controller_8cpp.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__controller_8cpp_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__controller_8cpp_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__dialog_8cpp.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__dialog_8cpp.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__dialog_8cpp_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__dialog_8cpp_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_8d.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2moc__mainwindow_8cpp_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2qrc___resources_8cpp.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2_e_w_i_e_g_a46_w_w_2qrc___resources_8cpp.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__dialog_8h.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__dialog_8h.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__dialog_8h_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__mainwindow_8h.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__mainwindow_8h.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2include_2ui__mainwindow_8h_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2moc__predefs_8h.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2moc__predefs_8h.js  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2moc__predefs_8h_source.html  _desktop___qt__6__7__0___min_g_w__64__bit-_debug_2_w_d_s___b_a_s_i_c__autogen_2mocs__compilation_8cpp.html  _desktop___qt__6__7__0__llvm__mingw__64__bit-_debug_2_c_make_files_23_827_87_2_compiler_id_c_x_x0044b6dbc700326c2134a5cd1d795048.html  (+214 more)
doc/html/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  (+47 more)
translations/: WDS_BASIC_pl_PL.qm  WDS_BASIC_pl_PL.ts
(+131 files in other folders)
